<resources>
    <string name="app_name">Alifbaa</string>
    <string name="find_the_letter">Find the letter</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tap_to_reveal_object">Tap to reveal object</string>
    <string name="full_version">full version</string>
    <string name="alif">alif</string>
    <string name="baa">baa</string>
    <string name="taa">taa</string>
    <string name="thaa">thaa</string>
    <string name="jeem">jeem</string>
    <string name="haa">haa</string>
    <string name="khaa">khaa</string>
    <string name="daal">daal</string>
    <string name="dhall">dhall</string>
    <string name="raa">raa</string>
    <string name="zaa">zaa</string>
    <string name="seen">seen</string>
    <string name="sheen">sheen</string>
    <string name="saad">saad</string>
    <string name="dhaad">dhaad</string>
    <string name="ayn">ayn</string>
    <string name="ghayan">ghayan</string>
    <string name="faa">faa</string>
    <string name="qaaf">qaaf</string>
    <string name="kaaf">kaaf</string>
    <string name="laam">laam</string>
    <string name="meem">meem</string>
    <string name="noon">noon</string>
    <string name="waaw">waaw</string>
    <string name="laam_alif">laam alif</string>
    <string name="hamza">hamza</string>
    <string name="yaa">yaa</string>
    <string name="rabbit">rabbit</string>
    <string name="duck">duck</string>
    <string name="crocodile">crocodile</string>
    <string name="fox">fox</string>
    <string name="camel">camel</string>
    <string name="horse">horse</string>
    <string name="sheep">sheep</string>
    <string name="bear">bear</string>
    <string name="housefly">housefly</string>
    <string name="raccoon">raccoon</string>
    <string name="giraffe">giraffe</string>
    <string name="fish">fish</string>
    <string name="lion_cub">lion cub</string>
    <string name="hawk">hawk</string>
    <string name="frog">frog</string>
    <string name="peacock">peacock</string>
    <string name="antelope">antelope</string>
    <string name="spider">spider</string>
    <string name="crow">crow</string>
    <string name="elephant">elephant</string>
    <string name="cat">cat</string>
    <string name="dog">dog</string>
    <string name="strok">stork</string>
    <string name="dragonfly">dragonfly</string>
    <string name="lion">lion</string>
    <string name="hoopoe">hoopoe</string>
    <string name="llama">llama</string>
    <string name="rhino">rhino</string>
    <string name="tiger">tiger</string>
    <string name="goat">goat</string>
    <string name="arnab">arnab</string>
    <string name="batta">batta</string>
    <string name="timsah">timsah</string>
    <string name="thalab">th\'alab</string>
    <string name="jamal">jamal</string>
    <string name="hisan">hisan</string>
    <string name="kharoof">kharoof</string>
    <string name="dob">dob</string>
    <string name="thababah">thababah</string>
    <string name="racoown">racoown</string>
    <string name="zarraffah">zaaraffah</string>
    <string name="samakah">samakah</string>
    <string name="shibl">shibl</string>
    <string name="saqar">saqar</string>
    <string name="dhafdaah">dhafda\'ah</string>
    <string name="tawoos">tawoos</string>
    <string name="dhaby">dhaby</string>
    <string name="anacaboot">\'ancaboot</string>
    <string name="goraab">goraab</string>
    <string name="feel">feel</string>
    <string name="qitta">qitta</string>
    <string name="kalb">kalb</string>
    <string name="laq_laq">laq laq</string>
    <string name="maiz">ma\'iz</string>
    <string name="namir">namir</string>
    <string name="waheed">waheed al qarn</string>
    <string name="hoodhood">hoodhood</string>
    <string name="laamaa">laamaa</string>
    <string name="asad">asad hayawaan</string>
    <string name="yassob">ya\'soob</string>
    <string name="are_you_sure_all_the_progress_will_be_lost">Are You Sure, all the progress will be lost?</string>
    <string name="best_score">BestScore:</string>
    <string name="drawn_letter_image">Drawn letter image</string>
    <string name="hint_letter_image">hint letter image</string>
    <string name="letter_image_option_one">letter image option one</string>
    <string name="letter_image_option_two">letter image option two</string>
    <string name="letter_image_option_three">letter image option three</string>
    <string name="letter_image_option_four">letter image option four</string>
    <string name="image_letter_to_trace">image letter to trace</string>
    <string name="clouds_image">clouds image</string>
    <string name="object_image">object image</string>
    <string name="object_word_writing_in_arabic">object word writing in arabic</string>
    <string name="tick_button">tick button</string>
    <string name="random_order">Random Order</string>
    <string name="enable_scoring">Enable scoring</string>
    <string name="display_hints">Display Hints</string>
    <string name="teacher_mode">Teacher mode</string>
    <string name="contact_us">contact us</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="review_this_app">Review this app</string>
    <string name="choose_colour">Choose colour</string>
    <string name="settings">Settings</string>
    <string name="your_score_is">Your Score is:</string>
    <string name="contact_form">contact form</string>
    <string name="name">Name</string>
    <string name="send">Send</string>
    <string name="email">Email</string>
    <string name="telephone">Telephone</string>
    <string name="quick_question">Quick question</string>
</resources>
