<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fefefe"
    android:orientation="vertical"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/letter_sound_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:textColor="#284c6a"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="alif" />

    <ImageView
        android:id="@+id/letter_animal_img"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:contentDescription="@string/object_image"
        android:src="@drawable/animal_a" />

    <ImageView
        android:id="@+id/letter_animal_spelling_img"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/object_word_writing_in_arabic"
        android:src="@drawable/spelling_a" />

    <TextView
        android:id="@+id/animal_in_english"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:textColor="#284c6a"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="rabbit" />

    <ImageView
        android:id="@+id/tick_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:contentDescription="@string/tick_button"
        android:gravity="start"
        android:src="@drawable/tickbutton" />
</LinearLayout>